--- a/views/main/login.html
+++ b/views/main/login.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
-    <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/public/assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="/public/assets/nprogress/nprogress.css">
-    <link rel="stylesheet" href="/public/less/index.css">
+    <?php include('./views/common/style.html'); ?>
 </head>
 <body>
     <!-- 登录 -->
@@ -15,25 +12,42 @@
             <div class="avatar">
                 <img src="./uploads/monkey.png" class="img-circle" alt="">
             </div>
-            <form action="" class="col-xs-offset-1 col-xs-10">
+            <form id="loginForm" class="col-xs-offset-1 col-xs-10">
                 <div class="input-group input-group-lg">
                     <span class="input-group-addon">
                         <i class="fa fa-user"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="用户名">
+                    <input name="tc_name" type="text" class="form-control" placeholder="用户名">
                 </div>
                 <div class="input-group input-group-lg">
                     <span class="input-group-addon">
                         <i class="fa fa-key"></i>
                     </span>
-                    <input type="password" class="form-control" placeholder="密码">
+                    <input name="tc_pass" type="password" class="form-control" placeholder="密码">
                 </div>
-                <button type="submit" class="btn btn-lg btn-primary btn-block">登 录</button>
+                <button id="loginBtn" type="submit" class="btn btn-lg btn-primary btn-block">登 录</button>
             </form>
         </div>
     </div>
-    
-    <script src="/public/assets/jquery/jquery.min.js"></script>
-    <script src="/public/assets/bootstrap/js/bootstrap.min.js"></script>
+    <?php include('./views/common/script.html'); ?>
+    <script type="text/javascript">
+        $('#loginBtn').click(function(){
+            $.ajax({
+                type : 'post',
+                url : '/api/login',
+                data : $('#loginForm').serialize(),
+                dataType : 'json',
+                success : function(data){
+                    if(data.code == 200){
+                        // 登录成功
+                        location.href = '/main/index';
+                    }else{
+                        alert('用户名或者密码错误');
+                    }
+                }
+            });
+            return false;
+        });
+    </script>
 </body>
 </html>
