--- a/views/common/script.html
+++ b/views/common/script.html
@@ -1,4 +1,5 @@
-<script src="/public/assets/jquery/jquery.min.js"></script>
-<script src="/public/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="/public/assets/nprogress/nprogress.js"></script>
-<script src="/public/js/common.js"></script>
+<script type="text/javascript" src="/public/assets/require/require.js"></script>
+<script type="text/javascript" src="/public/js/config.js"></script>
+<script type="text/javascript">
+  require(['common']);
+</script>
