--- a/views/main/index.html
+++ b/views/main/index.html
@@ -9,14 +9,6 @@
     
     <!-- 侧边栏 -->
     <div class="aside">
-        <!-- 个人资料 -->
-        <div class="profile">
-            <!-- 头像 -->
-            <div class="avatar img-circle">
-                <img src="./uploads/avatar.jpg">
-            </div>
-            <h4>布头儿</h4>
-        </div>
         <!-- 导航菜单 -->
         <?php include('./views/common/aside.html'); ?>
     </div>
@@ -66,35 +58,33 @@
         </div>
     </div>
     <?php include('./views/common/script.html'); ?>
-    <script src="/public/assets/echarts/echarts.min.js"></script>
-    <script src="/public/js/common.js"></script>
     <script>
 
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('main'));
+        // var myChart = echarts.init(document.getElementById('main'));
 
-        // 指定图表的配置项和数据
-        var option = {
-            title: {
-                text: 'ECharts 入门示例'
-            },
-            tooltip: {},
-            legend: {
-                data:['销量']
-            },
-            xAxis: {
-                data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
-            },
-            yAxis: {},
-            series: [{
-                name: '销量',
-                type: 'bar',
-                data: [5, 20, 36, 10, 10, 20]
-            }]
-        };
+        // // 指定图表的配置项和数据
+        // var option = {
+        //     title: {
+        //         text: 'ECharts 入门示例'
+        //     },
+        //     tooltip: {},
+        //     legend: {
+        //         data:['销量']
+        //     },
+        //     xAxis: {
+        //         data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
+        //     },
+        //     yAxis: {},
+        //     series: [{
+        //         name: '销量',
+        //         type: 'bar',
+        //         data: [5, 20, 36, 10, 10, 20]
+        //     }]
+        // };
 
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        // // 使用刚指定的配置项和数据显示图表。
+        // myChart.setOption(option);
 
     </script>
 </body>
