--- a/views/main/index.html
+++ b/views/main/index.html
@@ -58,7 +58,7 @@
     </div>
     <?php include('./views/common/script.html'); ?>
     <script>
-
+        require(['index']);
         // 基于准备好的dom，初始化echarts实例
         // var myChart = echarts.init(document.getElementById('main'));
 
