--- a/views/teacher/add.html
+++ b/views/teacher/add.html
@@ -17,62 +17,70 @@
         <div class="container-fluid">
             <!-- 头部 -->
             <?php include('./views/common/header.html'); ?>
-            <div class="body teacher">
-                <!-- 面包屑 -->
-                <ol class="breadcrumb">
-                    <li><a href="javascript:;">讲师管理</a></li>
-                    <li class="active">讲师添加</li>
-                </ol>
-                <div class="teacher-add">
-                    <form action="" class="form-horizontal col-xs-offset-2">
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">姓名</label>
-                            <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" placeholder="讲师名称">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">密码</label>
-                            <div class="col-xs-4">
-                                <input type="password" class="form-control input-sm">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">入职时间</label>
-                            <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">类型</label>
-                            <div class="col-xs-2">
-                                <select name="" class="form-control input-sm">
-                                    <option value="">讲师</option>
-                                    <option value="">管理员</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">性别</label>
-                            <div class="col-xs-4">
-                                <label class="radio-inline">
-                                    <input type="radio" checked> 男
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio"> 女
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-xs-7">
-                                <a href="./advert_list.html" class="btn btn-success btn-sm pull-right"> 添 加 </a>
-                            </div>                          
-                        </div>
-                    </form>
-                </div>
+            <div class="body teacher" id="teacherInfo">
+                <!-- 挖个大坑 -->
             </div>
         </div>
     </div>
+    <script type="text/template" id="teacherTpl">
+        <!-- 面包屑 -->
+        <ol class="breadcrumb">
+            <li><a href="javascript:;">讲师管理</a></li>
+            <li class="active">{{operate}}</li>
+        </ol>
+        <div class="teacher-add">
+            <form id="formId" class="form-horizontal col-xs-offset-2">
+                <div class="form-group">
+                    {{if tc_id}}
+                    <input type="hidden" name="tc_id" value="{{tc_id}}">
+                    {{/if}}
+                    <label for="" class="col-xs-3 control-label">姓名</label>
+                    <div class="col-xs-4">
+                        <input type="text" name="tc_name" value="{{tc_name}}" class="form-control input-sm" placeholder="讲师名称">
+                    </div>
+                </div>
+                {{if !tc_id}}
+                <div class="form-group">
+                    <label for="" class="col-xs-3 control-label">密码</label>
+                    <div class="col-xs-4">
+                        <input type="password" name="tc_pass" class="form-control input-sm">
+                    </div>
+                </div>
+                {{/if}}
+                <div class="form-group">
+                    <label for="" class="col-xs-3 control-label">入职时间</label>
+                    <div class="col-xs-4">
+                        <input type="text" name="tc_join_date" value="{{tc_join_date}}" class="form-control input-sm">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-xs-3 control-label">类型</label>
+                    <div class="col-xs-2">
+                        <select name="tc_type" class="form-control input-sm">
+                            <option value="1" {{if tc_type == 1}}selected{{/if}}>讲师</option>
+                            <option value="0" {{if tc_type == 0}}selected{{/if}}>管理员</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-xs-3 control-label">性别</label>
+                    <div class="col-xs-4">
+                        <label class="radio-inline">
+                            <input name="tc_gender" value="1" type="radio" {{if tc_gender == 1}}checked{{/if}}> 男
+                        </label>
+                        <label class="radio-inline">
+                            <input name="tc_gender" value="0" type="radio" {{if tc_gender == 0}}checked{{/if}}> 女
+                        </label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-xs-7">
+                        <input type="button" id="formBtn" class="btn btn-success btn-sm pull-right" value="提 交">
+                    </div>                          
+                </div>
+            </form>
+        </div>
+    </script>
     <?php include('./views/common/script.html'); ?>
     <script type="text/javascript">
         require(['teacheradd']);
