--- a/views/teacher/list.html
+++ b/views/teacher/list.html
@@ -137,7 +137,7 @@
         <td>{{$value.tc_cellphone}}</td>
         <td data-tcId="{{$value.tc_id}}" data-status="{{$value.tc_status}}">
             <a href="javascript:;" class="btn btn-info btn-xs preveiw">查 看</a>
-            <a href="./teacher_add.html" class="btn btn-info btn-xs">编 辑</a>
+            <a href="/teacher/add?tc_id={{$value.tc_id}}" class="btn btn-info btn-xs">编 辑</a>
             <a href="javascript:;" class="btn btn-warning btn-xs eod">
                 {{if $value.tc_status == 0}}
                     注 销
