添加日期插件

--- a/views/teacher/add.html
+++ b/views/teacher/add.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
     <?php include('./views/common/style.html'); ?>
+    <link rel="stylesheet" type="text/css" href="/public/assets/bootstrap-datepicker/css/bootstrap-datepicker.css">
 </head>
 <body>
     
@@ -50,7 +51,7 @@
                 <div class="form-group">
                     <label for="" class="col-xs-3 control-label">入职时间</label>
                     <div class="col-xs-4">
-                        <input type="text" name="tc_join_date" value="{{tc_join_date}}" class="form-control input-sm">
+                        <input type="text" data-provide='datepicker' data-date-language='zh-CN' data-date-format='yyyy-mm-dd' name="tc_join_date" value="{{tc_join_date}}" class="form-control input-sm">
                     </div>
                 </div>
                 <div class="form-group">
