--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -73,21 +73,15 @@
             </div>
             <div class="form-group">
                 <label for="" class="col-xs-3 control-label">籍贯</label>
-                <div class="col-xs-5">
-                    <select name="" class="form-control input-sm">
-                        <option value="">河北省</option>
-                        <option value="">山东省</option>
-                        <option value="">北京市</option>
+                <div class="col-xs-5" id="pcd">
+                    <select name="tc_province" id="p" data-id="{{tc_province}}" class="form-control input-sm">
+                        <option value="0">请选择省...</option>
                     </select>
-                    <select name="" class="form-control input-sm">
-                        <option value="">河北省</option>
-                        <option value="">山东省</option>
-                        <option value="">北京市</option>
+                    <select name="tc_city" id="c" data-id="{{tc_city}}" class="form-control input-sm">
+                        <option value="0">请选择市...</option>
                     </select>
-                    <select name="" class="form-control input-sm">
-                        <option value="">河北省</option>
-                        <option value="">山东省</option>
-                        <option value="">北京市</option>
+                    <select name="tc_district" id="d" data-id="{{tc_district}}" class="form-control input-sm">
+                        <option value="0">请选择区/县...</option>
                     </select>
                 </div>
             </div>
