--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -106,7 +106,7 @@
             <div class="form-group">
                 <label for="" class="col-xs-3 control-label">个人介绍</label>
                 <div class="col-xs-5 ckeditor">
-                    <textarea name="tc_introduce" rows="15" class="form-control input-sm">
+                    <textarea id="editor" name="tc_introduce" rows="15" class="form-control input-sm">
                         {{tc_introduce}}
                     </textarea>
                 </div>
