--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -27,8 +27,9 @@
         </div>
     </div>
     <script type="text/template" id="settingsTpl">
-        <form action="" class="form-horizontal">
+        <form id="settingForm" class="form-horizontal">
             <div class="form-group">
+                <input type="hidden" name="tc_id" value="{{tc_id}}">
                 <label for="" class="col-xs-3 control-label">姓名</label>
                 <div class="col-xs-5">
                     <p class="form-control-static">{{tc_name}}</p>
@@ -58,10 +59,10 @@
                 <label for="" class="col-xs-3 control-label">性别</label>
                 <div class="col-xs-3">
                     <label class="radio-inline">
-                        <input type="radio" value="1" {{if tc_gender==1}}checked{{/if}}> 男
+                        <input name="tc_gender" type="radio" value="1" {{if tc_gender==1}}checked{{/if}}> 男
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" value="0" {{if tc_gender==0}}checked{{/if}}> 女
+                        <input name="tc_gender" type="radio" value="0" {{if tc_gender==0}}checked{{/if}}> 女
                     </label>
                 </div>
             </div>
