--- a/views/common/aside.html
+++ b/views/common/aside.html
@@ -1,3 +1,4 @@
+
 <!-- 个人资料 -->
 <div class="profile" id="profileId">
     
@@ -13,7 +14,7 @@
         <li>
             <a href="./user_list.html">
                 <i class="fa fa-bell"></i>
-                用户管理
+                分类管理
             </a>
         </li>
         <li>
@@ -31,7 +32,7 @@
             <ul class="list-unstyled">
                 <li>
                     <a href="./course_add.html">
-                         课程添加
+                        课程添加
                     </a>
                 </li>
                 <li>
@@ -39,42 +40,8 @@
                         课程列表
                     </a>
                 </li>
-                <li>
-                    <a href="./course_category.html">
-                        课程分类
-                    </a>
-                </li>
-                <li>
-                    <a href="./course_topic.html">
-                        课程专题
-                    </a>
-                </li>
             </ul>
         </li>
-        <li>
-            <a href="./advert_list.html">
-                <i class="fa fa-bell"></i>
-                广告管理
-            </a>
-        </li>
-        <li>
-            <a href="javascript:;">
-                <i class="fa fa-cog"></i>
-                系统设置
-                <i class="arrow fa fa-angle-right"></i>
-            </a>
-            <ul class="list-unstyled">
-                <li>
-                    <a href="javascript:;">
-                        网站设置
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;">
-                         权限管理
-                    </a>
-                </li>
-            </ul>
-        </li>
+        
     </ul>
 </div>
