--- a/views/common/aside.html
+++ b/views/common/aside.html
@@ -31,12 +31,12 @@
             </a>
             <ul class="list-unstyled">
                 <li>
-                    <a href="./course_add.html">
+                    <a href="/course/add">
                         课程添加
                     </a>
                 </li>
                 <li>
-                    <a href="./course_list.html">
+                    <a href="/course/list">
                         课程列表
                     </a>
                 </li>
