--- a/views/course/basic.html
+++ b/views/course/basic.html
@@ -94,7 +94,7 @@
                     <div class="form-group">
                         <label for="" class="col-xs-2 control-label">分类</label>
                         <div class="col-xs-8">
-                            <select name="" class="form-control input-sm">
+                            <select id="firstType" name="" class="form-control input-sm">
                                 <option value="0">请选择一级分类...</option>
                                 {{if category}}
                                     {{each category.top}}
@@ -102,7 +102,7 @@
                                     {{/each}}
                                 {{/if}}
                             </select>
-                            <select name="" class="form-control input-sm">
+                            <select id="secondType" name="" class="form-control input-sm">
                                 <option value="0">请选择二级分类...</option>
                                 {{if category}}
                                     {{each category.childs}}
