实现课程封面上传操作

--- a/public/less/index.css
+++ b/public/less/index.css
@@ -8,6 +8,11 @@ img {
   display: block;
   width: 100%;
 }
+.upfilebtn span{
+  line-height: auto;
+  display: inline-block;
+  padding-bottom: 10px;
+}
 a {
   display: inline-block;
 }
