完成封面裁切功能

--- a/views/course/picture.html
+++ b/views/course/picture.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
     <?php include('./views/common/style.html'); ?>
-    <style type="text/css">
-    #upfile-button {
-        line-height: auto;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/public/assets/jcrop/css/Jcrop.min.css">
 </head>
 <body>
     
@@ -66,6 +62,12 @@
                     </a>
                 </li>
             </ul>
+            <form id="cropForm" style="display: none;">
+                <input type="text" name="x">
+                <input type="text" name="y">
+                <input type="text" name="w">
+                <input type="text" name="h">
+            </form>
             <!-- 课程图片 -->
             <div class="content">
                 <!-- 标题 -->
@@ -88,7 +90,7 @@
                         <input style="line-height: auto;" type="file" id="upfile" class="btn btn-success btn-sm">
                     </div>
                     <div class="col-xs-2">
-                        <a href="javascript:;" class="btn btn-warning btn-sm" disabled>裁切图片</a>
+                        <a id="cropBtn" href="javascript:;" class="btn btn-warning btn-sm" >裁切图片</a>
                     </div>
                 </div>
             </div>
