完成表单提交功能

--- a/views/course/lesson.html
+++ b/views/course/lesson.html
@@ -35,7 +35,7 @@
             <h4 class="modal-title">{{operate}}</h4>
         </div>
         <div class="modal-body">
-            <form action="" class="form-horizontal">
+            <form id="modalForm" class="form-horizontal">
                 <div class="form-group">
                     <label for="" class="col-xs-2 control-label">标题</label>
                     <div class="col-xs-6">
@@ -88,7 +88,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-link btn-sm" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-success btn-sm"> 添 加 </button>
+            <button id="modalBtn" type="button" class="btn btn-success btn-sm"> 添 加 </button>
         </div>
     </script>
     <script type="text/template" id="lessonTpl">
